# milah

./: .gitignore  COMPILE_AND_LAUNCH.sh  Cargo.toml  README.md
assets/: EN_5-char_wordlist.txt  EN_build_wordbank.sh  sources.txt
src/: game.rs  lib.rs  ui.rs
static/: index.html
